--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <!-- Font Awesome -->
     <script
       defer
@@ -99,7 +99,7 @@
           <div class="col-lg-6">
             <img
               class="title-img"
-              src="/images/iphone6.png"
+              src="images/iphone6.png"
               alt="iphone-mockup"
             />
           </div>
@@ -143,7 +143,7 @@
             </h2>
             <img
               class="testimonial-image"
-              src="/images/dog-img.jpg"
+              src="images/dog-img.jpg"
               alt="dog-profile"
             />
             <em>Pebbles, New York</em>
@@ -183,14 +183,14 @@
     <!-- Press -->
 
     <section class="colored-section" id="press">
-      <img class="press-logo" src="/images/TechCrunch.png" alt="tc-logo" />
-      <img class="press-logo" src="/images/tnw.png" alt="tnw-logo" />
+      <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo" />
+      <img class="press-logo" src="images/tnw.png" alt="tnw-logo" />
       <img
         class="press-logo"
-        src="/images/bizinsider.png"
+        src="images/bizinsider.png"
         alt="biz-insider-logo"
       />
-      <img class="press-logo" src="/images/mashable.png" alt="mashable-logo" />
+      <img class="press-logo" src="images/mashable.png" alt="mashable-logo" />
     </section>
 
     <!-- Pricing -->
